@@ -83,6 +83,7 @@ $Torrus::DevDiscover::timeFormat = '%d-%m-%Y %H:%M';
      'Torrus::DevDiscover::NexComm',
      'Torrus::DevDiscover::OracleDatabase',
      'Torrus::DevDiscover::Paradyne',          # needs testing
+     'Torrus::DevDiscover::Patton',
      'Torrus::DevDiscover::RFC1697_RDBMS',
      'Torrus::DevDiscover::Symmetricom',
      'Torrus::DevDiscover::Thomson_xDSL',
